# songvert

./: .env  .gitignore  Cargo.toml  README.md  test.json
example_show_playlists/: 0.json  68.json  69.json  69_with_edits.json  70.json  show_71_sep_22_2024.json  show_73_oct_6_2024.json  tester_oct_15_2023 2.json  tester_oct_15_2023 old.json  tester_oct_15_2023.json  tester_show_73_oct_6_2024.json
src/: album.rs  apple_music.rs  bandcamp.rs  cli.rs  error.rs  lib.rs  main.rs  playlist.rs  service.rs  spotify.rs  track.rs  utils.rs  youtube.rs
