[package]
name = "songvert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = { version = "4.0", features = ["derive"] }
# clap-verbosity-flag = "2.2.0"
dotenv = "0.15.0"
# indicatif = "0.17.8"
# log = "0.4.21"
regex = "1.10.5"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.1", features = ["full"] }
