[package]
name = "songvert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
id3 = { version = "1.14.0", features = [] }
mp4ameta = "0.11.0"
clap = { version = "4.0", features = ["derive"] }
# clap-verbosity-flag = "2.2.0"
# dotenv = "0.15.0"
# indicatif = "0.17.8"
# log = "0.4.21"
regex = "1.10.6"
reqwest = "0.12.7"
# rusty_ytdl = "0.7.4""
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
# youtube_dl = { version = "0.10.0", features = ["tokio"] }
